<resources>
    <string name="app_name">MoviesApp</string>
    <string name="welcome_to_movies_app">Welcome to Movies App</string>
    <string name="made_with">Made with</string>
    <string name="auaf">at AUAF</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="term_and_policies">Term and Policies</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sylanguage">Select your Language</string>
    <string name="top_actors">Top Actors</string>
    <string name="movies">Movies</string>
    <string name="hub">Hub</string>
</resources>