<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="locale"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:layoutDirection="locale"
        android:textDirection="locale"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/cardview_shadow_start_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn">

      <TextView

          android:textSize="30sp"
          android:gravity="center"
          android:textColor="@color/cardview_light_background"
          android:text="@string/register"
          android:layout_width="match_parent"
          android:layout_height="match_parent"></TextView>

    </androidx.cardview.widget.CardView>

    <EditText
        android:paddingStart="8dp"
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="124dp"
        android:ems="20"
        android:background="@drawable/background_edittext"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


    <FrameLayout
        android:id="@+id/etFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layoutDirection="locale"
        android:textDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress">

        <EditText
            android:id="@+id/etPassword"

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/background_edittext"
            android:ems="20"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:layoutDirection="locale"

            android:paddingStart="8dp"
            android:textDirection="locale" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="16dp"
            android:src="@drawable/showpasssword_24"></ImageView>

    </FrameLayout>
    <FrameLayout
        android:id="@+id/etFlConfPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layoutDirection="locale"
        android:textDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFrameLayout">

        <EditText
            android:id="@+id/etConfirmPassword"

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/background_edittext"
            android:ems="20"
            android:hint="@string/confirm_password"

            android:inputType="textPassword"
            android:layoutDirection="locale"

            android:paddingStart="8dp"
            android:textDirection="locale" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="16dp"
            android:src="@drawable/showpasssword_24"></ImageView>

    </FrameLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textColor="@color/cardview_light_background"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/background_button"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFlConfPassword" />

    <TextView
        android:id="@+id/tvTermANDpolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/term_and_policies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
</androidx.constraintlayout.widget.ConstraintLayout>